--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "authors": [
         {
             "name": "Mani Gudvardarson",
-            "email": "mani@bunq.com"
+            "email": "mani@hella.pw"
         }
     ],
     "autoload": {
